# plug-and-trust

./: README.rst
hostlib/hostLib/libCommon/nxScp/: nxScp03_Com.c
optee_lib/: CMakeLists.txt
optee_lib/glue/: der.c  i2c.c  stubs.c  user.c  wraps.c
optee_lib/glue/include/: der.h  fsl_sss_ftr.h  stubs.h
optee_lib/include/: Applet_SE050_Ver.h  PlugAndTrust_HostLib_Ver.h  PlugAndTrust_Pkg_Ver.h  adaptors.h  apduComm.h  ax_reset.h  der.h  ecp_alt.h  errno.h  ex_scp03_puf.h  ex_sss.h  ex_sss_auth.h  ex_sss_boot.h  ex_sss_boot_int.h  ex_sss_main_inc.h  ex_sss_main_inc_linux.h  ex_sss_objid.h  ex_sss_ports.h  ex_sss_scp03_keys.h  ex_sss_tp_scp03_keys.h  fsl_sscp.h  fsl_sss_api.h  fsl_sss_api_ver.h  fsl_sss_config.h  fsl_sss_ftr.h  fsl_sss_ftr_default.h  fsl_sss_keyid_map.h  fsl_sss_lpc55s_apis.h  fsl_sss_mbedtls_apis.h  fsl_sss_mbedtls_types.h  fsl_sss_openssl_apis.h  fsl_sss_openssl_types.h  fsl_sss_policy.h  fsl_sss_se05x_apis.h  fsl_sss_se05x_policy.h  fsl_sss_se05x_scp03.h  fsl_sss_se05x_types.h  fsl_sss_sscp.h  fsl_sss_types.h  fsl_sss_user_apis.h  (+50 more)
sss/inc/: fsl_sss_se05x_apis.h  fsl_sss_user_types.h  fsl_sss_util_asn1_der.h
sss/src/user/: fsl_sss_user_impl.c
sss/src/user/crypto/: aes.c  aes.h  aes_cmac.c  aes_cmac.h
